# pjecz-orion-flask

./: .gcloudignore  .gitignore  README.md  app.yaml  appserver.py  pyproject.toml  requirements.txt
.github/workflows/: gcloud-app-deploy.yaml
cli/: app.py
cli/commands/: alimentar_modulos.py  alimentar_permisos.py  alimentar_roles.py  alimentar_usuarios.py  alimentar_usuarios_roles.py  cmd_db.py  cmd_usuarios.py  respaldar_modulos.py  respaldar_roles_permisos.py  respaldar_usuarios_roles.py
config/: firebase.py  settings.py
lib/: datatables.py  exceptions.py  google_cloud_storage.py  pwgen.py  safe_next_url.py  safe_string.py  storage.py  tasks.py  universal_mixin.py
orion/: app.py  extensions.py
orion/blueprints/areas/: forms.py  models.py  views.py
orion/blueprints/atribuciones/: forms.py  models.py  views.py
orion/blueprints/atribuciones_ct/: forms.py  models.py  views.py
orion/blueprints/bancos/: forms.py  models.py  views.py
orion/blueprints/bitacoras/: models.py  views.py
orion/blueprints/carreras/: forms.py  models.py  views.py
orion/blueprints/centros_trabajos/: forms.py  models.py  views.py
orion/blueprints/distritos/: forms.py  models.py  views.py
orion/blueprints/domicilios/: forms.py  models.py  views.py
orion/blueprints/entradas_salidas/: models.py  views.py
orion/blueprints/historial_academicos/: forms.py  models.py  views.py
orion/blueprints/historial_puestos/: forms.py  models.py  views.py
orion/blueprints/incapacidades/: forms.py  models.py  views.py
orion/blueprints/licencias/: forms.py  models.py  views.py
(+184 files in other folders)
