[tool.poetry]
package-mode = false
name = "pjecz-orion-flask"
version = "0.1.0"
description = "Sistema web para administrar personal usado por Recursos Humanos."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
cryptography = "^43.0.0"
email-validator = "^2.2.0"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-moment = "^1.0.6"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.6"
flask-wtf = "^1.2.1"
google-auth = "^2.33.0"
google-cloud-secret-manager = "^2.20.2"
google-cloud-storage = "^2.18.1"
google-cloud = "^0.34.0"
google-generativeai = "^0.7.2"
gunicorn = "^22.0.0"
hashids = "^1.3.1"
jinja2 = "^3.1.4"
openpyxl = "^3.1.5"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
rq = "^1.16.2"
sqlalchemy = "^2.0.32"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.30.5"
werkzeug = "^3.0.3"
wtforms = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pylint = "^3.2.6"
pylint-sqlalchemy = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
